feat(controller): First testing controller - Adding basic SecurityConfig with PermittAll

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=ChatopAPI
 
+server.port=3001
+
 logging.level.root=error
 logging.level.com.openclassrooms=info
 logging.level.org.springframework.boot.web.embedded.tomcat=info
@@ -10,7 +12,9 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 # Erreur si les entities ne matchent pas la DB
 spring.jpa.hibernate.ddl-auto=validate
+# Hibernate cherche exactement le nom des tables donné dans les modèles
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # Attendre le démarrage d’Hibernate pour lancer le script SQL
 spring.jpa.defer-datasource-initialization=true
-# Exécuter le script SQL (data.sql) (data.sql)
+# Exécuter le script SQL (data.sql)
 spring.sql.init.mode=always
