--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,11 @@ logging.level.org.springframework.boot.web.embedded.tomcat=info
 spring.datasource.url=jdbc:mysql://localhost:3306/chatop
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
+app.jwt.private-key=${JWT_PRIVATE_KEY}
+app.jwt.public-key=${JWT_PUBLIC_KEY}
+app.jwt.validity=24
+
 # Erreur si les entities ne matchent pas la DB
 spring.jpa.hibernate.ddl-auto=validate
 # Hibernate cherche exactement le nom des tables donné dans les modèles
