refactor(config): set CORS headers in SecurityConfig rather than in every controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ app.jwt.private-key=${JWT_PRIVATE_KEY}
 app.jwt.public-key=${JWT_PUBLIC_KEY}
 app.jwt.validity=24
 
+frontend.url=http://localhost:4200
+
 # Erreur si les entities ne matchent pas la DB
 spring.jpa.hibernate.ddl-auto=validate
 # Hibernate cherche exactement le nom des tables donné dans les modèles
