--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,14 @@ app.jwt.private-key=${JWT_PRIVATE_KEY}
 app.jwt.public-key=${JWT_PUBLIC_KEY}
 app.jwt.validity=24
 
+app.upload-dir=${UPLOAD_DIR:/tmp/uploads}
+app.base-url=${BASE_URL:http://localhost:3001}
+
 frontend.url=http://localhost:4200
+
+# Limite d’upload de gros fichiers (situation abusive)
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=55MB
 
 # Erreur si les entities ne matchent pas la DB
 spring.jpa.hibernate.ddl-auto=validate
