--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,16 @@
 			<scope>test</scope>
 		</dependency>
 
+    <dependency>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        <version>2.8.9</version>
+    </dependency>
+    <!-- <dependency> -->
+    <!--     <groupId>io.springfox</groupId> -->
+    <!--     <artifactId>springfox-boot-starter</artifactId> -->
+    <!--     <version>3.0.0</version> -->
+    <!-- </dependency> -->
     <!-- <dependency> -->
     <!--   <groupId>io.jsonwebtoken</groupId> -->
     <!--   <artifactId>jjwt-api</artifactId> -->
