--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.level.com.openclassrooms=info
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 
 # Connexion MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/chatop
+spring.datasource.url=${DB_HOST:jdbc:mysql://localhost:3306/chatop}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
@@ -25,7 +25,8 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=55MB
 
 # Erreur si les entities ne matchent pas la DB
-spring.jpa.hibernate.ddl-auto=validate
+# spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 # Hibernate cherche exactement le nom des tables donné dans les modèles
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # Attendre le démarrage d’Hibernate pour lancer le script SQL
